--- a/index.html
+++ b/index.html
@@ -25,18 +25,19 @@
 						</nav>
 					</header>
 
-				<!-- Menu -->
-					<nav id="menu">
-						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="#one">Rase</a></li>
-							<li><a href="survey.html">Survey</a></li>
-						</ul>
-						<ul class="actions stacked">
-							<li><a href="register.html" class="button primary fit">Register</a></li>
-							<li><a href="login.html" class="button fit">Log In</a></li>
-						</ul>
-					</nav>
+					<!-- Menu -->
+	  					<nav id="menu">
+	  						<ul class="links">
+	  							<li><a href="index.html">Home</a></li>
+	  							<li><a href="#one">Rase</a></li>
+	  							<li><a href="survey.html">Sondaj</a></li>
+	                <li><a href="table.html">Tabel</a></li>
+	  						</ul>
+	  						<ul class="actions stacked">
+	  							<li><a href="register.html" class="button primary fit">Register</a></li>
+	  							<li><a href="login.html" class="button fit">Log In</a></li>
+	  						</ul>
+	  					</nav>
 
 				<!-- Banner -->
 					<section id="banner" class="major">
