--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 					<header id="header" class="alt">
 						<a href="index.html" class="logo"><strong>Buddy</strong></a>
 						<nav>
+							<a href="profile.php"><i class="fas fa-user-circle"></i>Profile</a>
 							<a href="#menu">Menu</a>
 						</nav>
 					</header>
