--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
     	if (!localStorage.getItem('cookieconsent')) {
 		  document.body.innerHTML += '\
 	  	<div class="cookieconsent" style="position:fixed;padding:20px;left:0;bottom:0;background-color:#000;color:#FFF;text-align:center;width:100%;z-index:99999;">\
-			This site uses cookies. By continuing to use this website, you agree to their use. \
-			<a href="#" style="color:#CCCCCC;">I Understand</a>\
+			Acest site foloseste cookies. Continuând să utilizați acest site web, sunteți de acord cu utilizarea acestora. \
+			<a href="#" style="color:#CCCCCC;">Inteleg!</a>\
 	  	</div>\
 		 ';
 		  document.querySelector('.cookieconsent a').onclick = function(e) {
